fix alignment issues

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,1 +1,13 @@
 @import 'bootstrap';
+
+.navbar-right {
+  padding-right: 14px;
+}
+
+.checkbox {
+  float: left;
+}
+
+.checkbox-label {
+  padding-left: 5px;
+}
